syntax = "proto3";

package postpb;

option go_package = "github.com/bektosh03/test-crud/genprotos/postpb";

message Post {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
}

message GetPostRequest {
    int64 post_id = 1;
}

message DeletePostRequest {
    int64 post_id = 1;
}

message ListPostsRequest {
    int64 page = 1;
    int64 limit = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
}
